--- a/config/database.yml
+++ b/config/database.yml
@@ -1,25 +1,19 @@
-# SQLite. Versions 3.8.0 and up are supported.
-#   gem install sqlite3
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem 'sqlite3'
-#
 default: &default
-  adapter: sqlite3
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  timeout: 5000
+  adapter: mysql2
+  encoding: utf8
+  username: <%= ENV['database_user'] %>
+  password: <%= ENV['database_password'] %>
+  host: 192.168.0.162
+  port: 3306
 
 development:
   <<: *default
-  database: db/development.sqlite3
+  database: dev_tpi_ruby
 
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
-test:
-  <<: *default
-  database: db/test.sqlite3
+# test:
+#   <<: *default
+#   database: test_tpi_ruby
 
 production:
   <<: *default
-  database: db/production.sqlite3
+  database: tpi_ruby
