--- a/config/database.yml
+++ b/config/database.yml
@@ -1,5 +1,4 @@
 default: &default
-  adapter: <%= ENV['database_adapter'] %>
   encoding: utf8
   username: <%= ENV['database_user'] %>
   password: <%= ENV['database_password'] %>
@@ -11,10 +10,9 @@ development:
   adapter: mysql
   database: dev_tpi_ruby
 
-test:
-  <<: *default
-  adapter: mysql
-  database: test_tpi_ruby
+# test:
+#   <<: *default
+#   database: test_tpi_ruby
 
 production:
   <<: *default
