--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,8 @@
 !/storage/.keep
 .byebug_history
 
+# Ignore master key for decrypting credentials and more.
+/config/master.key
 
 /vendor
 /config/application.yml
